# Scanr

./: .gitignore  BRANCHING.md  Cargo.toml  README.md  changelog.md  mkdocs.yml
.github/workflows/: ci.yml  release.yml  scanr-sarif.yml
crates/scanr-cli/: Cargo.toml
crates/scanr-cli/src/: main.rs  tui.rs
crates/scanr-container/: Cargo.toml
crates/scanr-container/src/: lib.rs
crates/scanr-core/: Cargo.toml
crates/scanr-core/src/: baseline.rs  lib.rs
crates/scanr-core/src/cache/: ttl.rs
crates/scanr-core/src/license/: evaluator.rs  mod.rs
crates/scanr-core/src/trace/: mod.rs  node_graph.rs  tracer.rs
crates/scanr-engine/: Cargo.toml
crates/scanr-engine/src/: lib.rs
crates/scanr-sca/: Cargo.toml
crates/scanr-sca/src/: lib.rs
crates/scanr-sca/src/cache/: mod.rs  store.rs
crates/scanr-sca/src/license/: extractor.rs
crates/scanr-sca/src/trace/: mod.rs
docs/: baseline.md  cache.md  changelog.md  ci-policy.md  cli.md  core.md  development.md  index.md  installation.md  output-formats.md  sbom.md  tui.md
installers/: README.md  install.sh
installers/aur/: .SRCINFO  PKGBUILD
installers/bun/: README.md
installers/homebrew/: scanr.rb
installers/npm/: README.md  package.json
installers/npm/scripts/: install.js
