[package]
name = "scanr-cli"
version = "0.1.0"
edition = "2024"
description = "Scanr command-line interface"
license = "Apache-2.0"
repository = "https://github.com/scanr-dev/scanr"
homepage = "https://scanr.dev"
readme = "../../README.md"
keywords = ["security", "devsecops", "sbom", "vulnerability", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.28"
scanr-core = { path = "../scanr-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "scanr"
path = "src/main.rs"
