[package]
name = "scanr-core"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["time"] }
toml = "0.8"
